Add a database loader (#719)
